apps/base/burntbytes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: burntbytes
  labels:
    http-ingress: "true"
